3.3.5
* adjusted capacitor recipes
* mobs in dungeons can now open wooden doors to haunt player, this doesnt seem to work all the time unfortunately but should add some more danger. 
3.3.4
* fix map loot being all lvl 1
* fix painful lesson item giving a bit more than intended
* made identify tomes more expensive
3.3.3
* fix vanilla gui type and polish a bit
* can see lvl and exp in main hub now

3.3.2
* fix too high map dmg affix
3.3.1
* increased map startup cost.
* when you sleep you now get a message you're refreshed, meaning map droprate is high for you now.
* added a teleport back scroll, its craftable
* changed mob dmg from spell to atk dmg to attack element dmg in maps.
* fixed salvage outputs being stuck and not put into hoppers
* repair station is now automatable too
* fixed control not showing enchants
* added vanilla like gui option that doesnt show numbers for hp energy etc and neither lvl or exp, but it looks nicer to me.
* should fix crash on random

3.3.0

This is basically an economy update! I added new resource sinks, increased repair costs, reduced salvaged ores etc..
I also added a new way to gain ores, salvaging currencies! 
I'm trying to make it so there's no such thing as a useless item, and currencies before were useless if you didn't need them.
Map device now needs fuel to start maps (why was dimensional travel free before!?) and now you can find a dungeon merchant in dungeons to spend your extra ores on.
Oh and lots of items now need to be identified to be used. 
In short, prepare for scarcity!

The good thing is even if you hate the scarcity, i added some configs to let you control the costs of these resource sinks.

* try fix lightning strikes being heard from everyone on server
* confine random dungeons to world border as some mods might change it
* regen should now cost hunger same as vanilla regen did before
* health and magic shield no longer regen at low hunger.