@@ -1,0 +1,5 @@
+{
+    "variants": {
+        "": { "model": "mmorpg:block/trapped_map_chest" }
+    }
+}
