@@ -1,0 +1,6 @@
+{
+    "textures": {
+        "particle": "block/oak_planks"
+    }
+}
+
